--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -1,5 +1,5 @@
 \section*{Goals of the External Stay}
-For me the three most significant goals of the external stay would be something like:
+For me the three most significant goals of the external stay would be:
 
 \begin{itemize}
 	\item Gauge whether my Ph.D. project can be implemented in practice. 
@@ -8,22 +8,23 @@ For me the three most significant goals of the external stay would be something 
 \end{itemize}
 
 I have a somewhat naive belief that I have found a solid scalable approach to modelling a generic 
-maintenance scheduling system (see \ref{sec:technical} section below). 
+maintenance scheduling system (see \ref{sec:technical} section below). I am 
+modelling something that is similar to what is described on \cite{palmerMaintenancePlanningScheduling2019} 
+which is a source that has a more practical orientation than most academic works. 
 
-My code work on backend SAP tables so I believe that there may be a possibility of integrating my 
-code into a system at Decision Brain. Finding a way to integrate my system into a Decision Brain
-where the relevant team at Decision Brain would then be able to judge the potential financial value 
-of a full implementation of my project would be the ultimate goal of the external stay.
-
-Something similar to what is elaborated on in \cite{palmerMaintenancePlanningScheduling2019} which has a 
-more practical orientation. 
+My code work on backend SAP tables and user-inputs so I believe that there may be a possibility of integrating my 
+code into a system at Decision Brain if this is deemed of value. Integrating the system at Decision 
+Brain would be ideal as I think that it would enable us judge the potential financial value 
+of a full implementation of my project. It would also make it clear if it is a project that is worth chasing further
+by Decision Brain. 
 
 \section*{Setup of the External Stay}
-My initial idea of a setup with Decision Brain, would be that I stable contact for the duration of the external stay with which
+My initial idea of a setup with Decision Brain, would be that I get a stable contact for the duration of the external stay with which
 I can discuss my ideas and that I can rely on for help.
 
 \begin{itemize}
-	\item First month: Determine if I could integration my application in a relevant project at Decision Brain. (Maybe a git branch)
-	\item Second month:  
-	\item Third month:
+	% TODO: This is not that great should be changed
+	\item First month: Determine if I can integrate my application in a relevant project at Decision Brain.
+	\item Second month: Work on implementing the scheduling system in Decision Brain's IT infrastructure.
+	\item Third month: Assess the feasibility of the project and possible course corrections.
 \end{itemize}
