--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -1,4 +1,11 @@
 \section*{Personal}
 
+
 \subsection*{Personality Test}
+
+
+
+Extroversion ----------------------- Introversion   
+Extroversion ----------------------- Introversion   
+
 
