--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -2,9 +2,9 @@
 I am doing a research project in collaboration with Total Energies. I am in the process of modelling 
 their scheduling process in a way that will allow us to optimize their operations. My main concerns
 in this process is how to make the project succeed with the numerous decision that I have to make but 
-which I feel poorly equiped to make. It is my hope that an external stay at Decision Brain will help
-me understand what the best appraoch are to making my project succeed, both on the Ph.D. but also 
-after my graduation. Below is a list of my main issues so far that I have failed to solve by myself. 
+which I feel poorly equiped to make. My hope is that an external stay at Decision Brain will help
+me understand what the best appraoch are to making my project succeed. This includes both the Ph.D. and 
+potentially after my graduation. Below is a list of my main issues so far that I have failed to solve by myself. 
 
 \textbf{Main Issues:}
 \begin{itemize}
