--- a/memos/decision-brain/main.tex
+++ b/memos/decision-brain/main.tex
@@ -24,7 +24,7 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{Memo: Decision-Brain External Stay}
+\lhead{Project Plan: Decision-Brain External Stay}
 \rhead{Christian Brunbjerg Jespersen}
 
 \cfoot{\thepage}
@@ -32,16 +32,17 @@
 
 \titleformat{\section}{\normalfont\Large\bfseries}{}{0em}{}
 \title{
-	Memo: Application for External Stay at Decision-Brain
+	Project Plan: Application for External Stay at Decision Brain
 }
 
 \begin{document}
 	\input{./summary.tex}
 	\input{./goals-of-external-stay.tex}
 	\input{./roadmap.tex}
-	\input{./personal.tex}
+	% \input{./personal.tex}
 	\input{./technical.tex}
-	\input{./academic.tex}
+	% \input{./academic.tex}
+	\input{./appendix.tex}
 	% \input{./../../curriculum-vitae.tex}
 \end{document}
 
