--- a/memos/decision-brain/roadmap.tex
+++ b/memos/decision-brain/roadmap.tex
@@ -9,5 +9,5 @@
 	\item[$\square$] Write data directly to SAP
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Test output with scheduler stakeholder
 	\item[$\square$] Test output with supervisor stakeholder
-	\item[$\square$] Test output with technicial stakeholder
+	\item[$\square$] Test output with technician stakeholder
 \end{itemize}
