--- a/curriculum-vitae/main.tex
+++ b/curriculum-vitae/main.tex
@@ -38,31 +38,29 @@
 \begin{minipage}[t]{0.5\textwidth} 
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
-	{ \fontsize{16}{20} \textcolor{black}{\textbf{\MakeUppercase{Your Name Here}}}} % First name
+	{ \fontsize{16}{20} \textcolor{black}{\textbf{\MakeUppercase{Christian\\Brunbjerg\\Jespersen}}}} % First name
 	
 	\vspace{6pt}
 	
-	{\Large Developer $\sim$ Engineer} % Career or current job title
+	{\Large Engineer $\sim$ Mathematician} % Career or current job title
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.2\textwidth} % 20% of the page width for the first row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
 	% The first parameter is the FontAwesome icon name, the second is the box size and the third is the text
-	\icon{Globe}{11}{\href{http://www.google.com}{portafolio.com}}\\ 
-    \icon{Phone}{11}{11 1111 1111}\\
-    \icon{MapMarker}{11}{City, Country}\\
+	\icon{Globe}{11}{\href{http://www.google.com}{github.com/scipo-code}}\\ 
+    \icon{Phone}{11}{0045 2843 3974}\\
+    \icon{MapMarker}{11}{Copenhagen, Denmark}\\
 	
 \end{minipage}
 \begin{minipage}[t]{0.27\textwidth} % 27% of the page width for the second row of icons
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
-	\icon{Envelope}{11}{\href{mailto:email@example.com}{email.email@example.com}}\\	
-    \icon{Github}{11}{\href{https://github.com/uma-dev}{github.com/uma-dev}}\\
-    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com}{/in/your-personal-url}}\\    
-    
+	\icon{Envelope}{11}{\href{mailto:chri1423@gmail.com}{chri1423@gmail.com}}\\	
+    \icon{Github}{11}{\href{https://github.com/uma-dev}{github.com/brunbjerg}}\\
+    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com}{in/christian-brunbjerg-jespersen-1a2095106/}}\\    
 \end{minipage}
-
 
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION, SKILLS AND TECHNOLOGIES
@@ -72,8 +70,7 @@
     \cvsect{Summary}
 	\vspace{-6pt}
  
-    %Dummy text
-	\lipsum[1][1-5] \\
+	Technically skilled operation researcher, confident in metaheuristic design, implemention, and deployment.
 \end{minipage}
 \hfill % Whitespace between
 \begin{minipage}[t]{0.465\textwidth}
@@ -85,7 +82,7 @@
     \end{minipage}
     \hfill
     \begin{minipage}[t]{0.73\textwidth}
-      Java, SQL, Python, JavaScript, HTML, C++, C.  
+	  All programming languages
     \end{minipage}
     \vspace{4mm}
     
@@ -94,7 +91,7 @@
     \end{minipage}
     \hfill
     \begin{minipage}[t]{0.73\textwidth}
-      GCP, Docker, Kubernetes, Spark, Hadoop, Hive.
+    	Docker, Kubernetes, PKI, Nix.
     \end{minipage}
     
 \end{minipage}
@@ -106,28 +103,35 @@
 \begin{entrylist}
     \entry
 		{Technology}
-		{My project 1}
-		{github.com link}
-		{%Dummy text 
-        \lipsum[1][1-3]}
-    \entry
-		{Technology}
-		{My project 2}
-		{github.com link}
-		{%Dummy text 
-        \lipsum[1][1-3]}
+		{Scheduling System API}
+		{github.com/scipo-code/ordinator-api.git}
+		{
+        	Main repository for the backend API of my Ph.D. project.
+		}
 	\entry
 		{Technology}
-		{My project 3}
-		{github.com link}
-		{%Dummy text 
-        \lipsum[1][1-3]}
+		{Matheuristics in Maintenance Scheduling}
+		{github.com/brunbjerg/MaintenanceSchedulingMatheuristic.git}
+		{ 
+			Large Neighborhood Search based matheuristics for the maintenance scheduling problem.
+		}
     \entry
 		{Technology}
-		{My project 4}
-		{github.com link}
-		{%Dummy text 
-        \lipsum[1][1-3]}
+		{Optimization of Fuel Delivery}
+		{github.com/brunbjerg/optimization-of-fuel-delivery.git}
+		{ 
+			Master thesis project. 
+		}
+    \entry
+		{Technology}
+		{Poker Stochastic Probability Simulator}
+		{
+			github.com/brunbjerg/probker.git
+		}
+		{ 
+			Hobby project \\ 
+			Frontend: github.com/brunbjerg/probker-frontend.git
+		}
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
@@ -136,26 +140,27 @@
 \vspace{-10 pt}
 \cvsect{Education}
 \begin{entrylist}
-    \entry
-		{3/2023 - x/2023}
-		{\lipsum[1][1] }
-		{School}
-		{Enrolled, part time program for development}
-    \entry
-		{x/2023 - x/2023}
-		{Professional Certificate}
-		{School}
-		{\lipsum[1][1]}
 	\entry
 		{x/2023 - x/2023}
-		{Certificate}
-		{School}
-		{\lipsum[1][2]}
-	\entry
-		{x/2023 - x/2023}
-		{Engineer}
-		{School}
-		{\lipsum[1][2]}
+		{Ph.D. in Multi-actor Maintenance Scheduling}
+		{DTU Construct, DTU Management, and Total Energies}
+		{
+			API development, 
+		}
+    \entry
+		{9/2020 - 12/2022}
+		{Master in Mathematical Modelling and Computation - Operation Research }
+		{DTU Compute}
+		{
+			Metaheuristics, statistics, programming, 
+		}
+    \entry
+		{9/2017 - 7/2020}
+		{Bachelor in Mathematical Engineering - Operation Research}
+		{DTU Compute}
+		{
+			
+		}
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
@@ -165,35 +170,46 @@
 \cvsect{Experience}
 \begin{entrylist}
 	\entry
-        {x/2023 -- x/2023}
-		{\lipsum[1][1]}
-		{Company}
+        {x/2017 -- x/2022}
+		{Teaching Assistant}
+		{Technical University of Denmark}
 		{\vspace{-10pt}
         \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item \lipsum[1][1-2]
-            \item \lipsum[1][3-4]
+            \item Mathematical Programming Modelling 
+            \item Programming of scientific software
         \end{itemize} 
-        \texttt{SQL} \slashsep \texttt{Excel}}
+        \texttt{Julia} \slashsep \texttt{Mathematical Programming Modelling}}
 	\entry
-		{x/2023 -- x/2023}
-		{\lipsum[1][1]}
-		{Company}
-		{\vspace{-10pt}
-        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item \lipsum[1][1-2]
-            \item \lipsum[1][3-4]
-        \end{itemize} 
-        \texttt{SQL} \slashsep \texttt{Excel}}
+		{x/2010 -- x/2020}
+		{Production Operator and Maintenance Technician}
+		{Nordic Sense}
+		{\vspace{-10pt}\\
+		I have worked many years at my families factory doing everything doing production \\
+		tasks when I was younger and helping maintaining and commisioning new machines when \\
+		I got older. This has proven to be very valuable experience throughout my current \\
+		Ph.D. programme.
+        % \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+        % \end{itemize} 
+        }
 	\entry
-		{x/2023 -- x/2023 \\\footnotesize{scholarship holder}}
-		{\lipsum[1][1]}
-		{Company}
+		{x/2016 -- x/2017 \\\footnotesize{scholarship holder}}
+		{Production Operator and Maintenance Technician}
+		{Grundfos}
 		{\vspace{-10pt}
         \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item \lipsum[1][1-2]
-            \item \lipsum[1][3-4]
+            \item Maintenance technician 5 months
+            \item Production technician 4 months
         \end{itemize} 
-        \texttt{SQL} \slashsep \texttt{Excel}}
+        }
+	\entry
+		{x/2015 -- x/2016 \\\footnotesize{}}
+		{Event promotor}
+		{Det Blå Danmark}
+		{\vspace{-10pt}
+        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+            \item 
+        \end{itemize} 
+        \texttt{Event coordination}}
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
@@ -203,7 +219,7 @@
 	\cvsect{Languages}
     \vspace{-6pt}
     
-    \hspace{26mm} \textbf{English} - B2+, \textbf{ Spanish} - native
+    \hspace{26mm} \textbf{English} - Fluent, \textbf{Danish} - Native
 
 %----------------------------------------------------------------------------------------
 
