--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -247,7 +247,7 @@ This allows us to be precise in the timing on the messages that are send to the 
 %\label{sub2sec2}
 %The actor-based large neighborhood search is implemented on the MCMKP which models that weekly schedule in maintenance. The model is comprised of five different sets. $P$ is the number of weekly periods; $W$ is the number of work orders; $\tau$ is the number of different traits; $E$ is a set that defines which work orders should be excluded from a specific weekly period; $I$ is an inclusion set that defines the allocation of specific work orders which should be included in a specific weekly period. The model has four parameters. $v_{pw}$ is the value of work order $w$ in weekly period $p$; $d$ is the penalty for exceeding a specific trait capacity; $c_{w\tau}$ is the capacity requirement for work order $w$ for trait $t$; $cap_{p\tau}$ is the total amount of capacity available in for weekly period p for for trait t. The model has 2 decision variables. $x_{wp}$, is a binary decision variable equal to one if work order w is in weekly period p and zero otherwise; $pen_{p\tau}$ is non-negative decision variable equal to the amount of excess capacity above the $cap_{p\tau}$ in weekly period p for trait $\tau$. The parameters $v$, $cap$, $Q$, and $P$ are functions of time, $\tau$, in this case as they will be subject to change during the solution process.
 
-%\input{../../tex/models/strategic.tex}
+\input{../../tex/models/strategic.tex}
 % \begin{alignat}{2}
 % 	& \text{Min} \quad \sum_{w = 1}^{W} \sum_{p = 1}^{P} v_{wp}(t) \cdot x_{wp}(t) + \sum_{p = 1}^{P} \sum_{\tau = 1}^T d \cdot pen_{p\tau}(t)   \label{eqn:objective_function_strategic} \\[1em]
 %     & \text{subject to:} \notag                                                                                                                                        \\[1em]
@@ -260,17 +260,17 @@ This allows us to be precise in the timing on the messages that are send to the 
 % \end{alignat}
 
 
-\begin{alignat}{4}   
-\texttt{Min}& 
- \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \notag \\
- & + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess \notag \\
- & + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} \notag \\
- & \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}   
- \label{eqn:objective_function_strategic} \\
+%\begin{alignat}{4}   
+%\texttt{Min}& 
+% \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \notag \\
+% & + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess \notag \\
+% & + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} \notag \\
+% & \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}   
+% \label{eqn:objective_function_strategic} \\
  %\quad \sum_{l \in L} \sum_{m \in M} v_{l,m} 
  %&  \label{mod3:o1}\\
- \text{s.t.}	\notag\\
- 				& \sum_{i \in I} C^{1}_i \cdot x^k_i & = z^k_1 - z^1_1 & \forall k \in K \label{mod3:setz1}\\
+ %\text{s.t.}	\notag\\
+% 				& \sum_{i \in I} C^{1}_i \cdot x^k_i & = z^k_1 - z^1_1 & \forall k \in K \label{mod3:setz1}\\
 %& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \notag      \\
  %&				& \sum_{i \in I} C^{2}_i \cdot x^k_i %& = z^k_2 - z^K_2 & \forall k \in K %\label{mod3:setz2}\\
  %&				& \sum_{i \in I} w_i \cdot x^k_i %&\leq W & \forall \ \forall k \in %K\label{mod3:knapsack_cons}\\
@@ -281,8 +281,8 @@ This allows us to be precise in the timing on the messages that are send to the 
  %&              & x^{K}_i & = x^{LR}_i & \forall %i\in I \label{mod3:fixLR}\\
  %%&              & v_{l,m} & \leq 0 & \forall l \in %L, m \in M | l \leq z^1_1 \label{mod3:limitREF1}\\
  %%&              & v_{l,m} & \leq 0 & \forall l \in %L, m \in M | l \leq z^K_2 \label{mod3:limitREF2}\\
- &				& x_i \in \{0,1\},&z_1,z_2 \in Z+& v_{l,m},y_{k,l,m} \in \{0,1\} \label{mod3:domain}
-\end{alignat}
+ %&				& x_i \in \{0,1\},&z_1,z_2 \in Z+& v_{l,m},y_{k,l,m} \in \{0,1\} \label{mod3:domain}
+%\end{alignat}
 
 
 The objective function \eqref{eqn:objective_function_strategic} minimizes the total weight of all work order assignments together with the penalty $d$ for exceeding the capacity given in constraint \eqref{eqn:capacity_constraint}. Constraint \eqref{eqn:capacity_constraint} ensures that all the weights $c_{w\tau}$ for each activity in an work order, given that it has been assigned, is lower than the capacity for each period and for each trait $\tau$. $pen_{p\tau}$ is the amount of exceeded capacity that is needed for the current assignment of work order to be feasible. Constraint \eqref{eqn:single_workorder_constraint} makes sure that each work order is assigned to at least a single period. Constraint \eqref{eqn:exclusion_constraint} excludes a work order from a certain period and constraint \eqref{eqn:inclusion_constraint} forces a specific work order to be in a specific period. Constraint \eqref{eqn:x_integrality_constraint} and \eqref{eqn:p_non_negativity_constraint} specify the variable domain for $x_{wp}$ and $pen_{p\tau}$ respectively. The effects of changing $E$, $I$, $cap$, and $v$ in real-time will be examined to determine their effects on the weekly schedules and objective value.
