--- a/curriculum-vitae/main.tex
+++ b/curriculum-vitae/main.tex
@@ -49,9 +49,9 @@
 	\vspace{-\baselineskip} % Required for vertically aligning minipages
 	
 	% The first parameter is the FontAwesome icon name, the second is the box size and the third is the text
-	\icon{Globe}{11}{\href{http://www.google.com}{github.com/scipo-code}}\\ 
+	\icon{Globe}{11}{\href{http://www.google.com}{\parbox{2cm}{github.com/\\scipo-code}}}\\ 
     \icon{Phone}{11}{0045 2843 3974}\\
-    \icon{MapMarker}{11}{Copenhagen, Denmark}\\
+    \icon{MapMarker}{11}{\parbox{2cm}{Copenhagen\\Denmark}}\\
 	
 \end{minipage}
 \begin{minipage}[t]{0.27\textwidth} % 27% of the page width for the second row of icons
@@ -59,7 +59,7 @@
 	
 	\icon{Envelope}{11}{\href{mailto:chri1423@gmail.com}{chri1423@gmail.com}}\\	
     \icon{Github}{11}{\href{https://github.com/uma-dev}{github.com/brunbjerg}}\\
-    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com}{in/christian-brunbjerg-jespersen-1a2095106/}}\\    
+    \icon{LinkedinSquare}{11}{\href{https://www.linkedin.com}{in/cbrje}}\\    
 \end{minipage}
 
 %----------------------------------------------------------------------------------------
@@ -69,8 +69,11 @@
 \begin{minipage}[t]{0.46\textwidth}
     \cvsect{Summary}
 	\vspace{-6pt}
- 
-	Technically skilled operation researcher, confident in metaheuristic design, implemention, and deployment.
+
+ 	Technically skilled operation researcher, confident in metaheuristic design, implementation, and deployment.
+
+	Able to manage a project including scoping, data collection, interviewing, and stakeholder management.
+
 \end{minipage}
 \hfill % Whitespace between
 \begin{minipage}[t]{0.465\textwidth}
@@ -91,7 +94,7 @@
     \end{minipage}
     \hfill
     \begin{minipage}[t]{0.73\textwidth}
-    	Docker, Kubernetes, PKI, Nix.
+    	Linux, Docker, Kubernetes, PKI, Nix.
     \end{minipage}
     
 \end{minipage}
@@ -141,25 +144,25 @@
 \cvsect{Education}
 \begin{entrylist}
 	\entry
-		{x/2023 - x/2023}
+		{2/2023 - 2/2026}
 		{Ph.D. in Multi-actor Maintenance Scheduling}
-		{DTU Construct, DTU Management, and Total Energies}
+		{Total Energies, DTU Construct, and DTU Management}
 		{
-			API development, 
+			Multi-threaded Scheduling Systems, API development, Interviewing, Testing with Stakeholders. 
 		}
     \entry
 		{9/2020 - 12/2022}
 		{Master in Mathematical Modelling and Computation - Operation Research }
 		{DTU Compute}
 		{
-			Metaheuristics, statistics, programming, 
+			Metaheuristics, Statistics, Programming. 
 		}
     \entry
 		{9/2017 - 7/2020}
 		{Bachelor in Mathematical Engineering - Operation Research}
 		{DTU Compute}
 		{
-			
+			Algorithms, Operation Research.
 		}
 \end{entrylist}
 
@@ -170,57 +173,107 @@
 \cvsect{Experience}
 \begin{entrylist}
 	\entry
-        {x/2017 -- x/2022}
+        {2017 -- 2022}
 		{Teaching Assistant}
 		{Technical University of Denmark}
-		{\vspace{-10pt}
-        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item Mathematical Programming Modelling 
-            \item Programming of scientific software
-        \end{itemize} 
-        \texttt{Julia} \slashsep \texttt{Mathematical Programming Modelling}}
+		{
+			\vspace{-10pt}
+	        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
+	            \item Mathematical Programming Modelling 
+	            \item Programming of Scientific Software
+	        \end{itemize} 
+	        \texttt{Teaching}
+		}
 	\entry
-		{x/2010 -- x/2020}
+		{1/2010 -- 12/2020}
 		{Production Operator and Maintenance Technician}
 		{Nordic Sense}
-		{\vspace{-10pt}\\
-		I have worked many years at my families factory doing everything doing production \\
-		tasks when I was younger and helping maintaining and commisioning new machines when \\
-		I got older. This has proven to be very valuable experience throughout my current \\
-		Ph.D. programme.
-        % \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-        % \end{itemize} 
+		{
+			\vspace{-10pt}\\
+			I have worked for years at my familie's factory working with everything from \\
+			production tasks to maintaining and commissioning new machines. This has \\ 
+			proven to be a valuable experience throughout my current Ph.D. programme.\\
+			\texttt{Ownership}
         }
 	\entry
-		{x/2016 -- x/2017 \\\footnotesize{scholarship holder}}
+		{9/2016 -- 7/2017 \\\footnotesize{}}
 		{Production Operator and Maintenance Technician}
 		{Grundfos}
-		{\vspace{-10pt}
-        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item Maintenance technician 5 months
-            \item Production technician 4 months
-        \end{itemize} 
+		{
+			\vspace{-10pt}\\
+	        Production technician for 4 months and Maintenance technician for 5 months\\
+			\texttt{Practical Production} \slashsep \texttt{Practical Maintenance}
         }
 	\entry
-		{x/2015 -- x/2016 \\\footnotesize{}}
+		{7/2015 -- 6/2016 \\\footnotesize{}}
 		{Event promotor}
 		{Det Blå Danmark}
-		{\vspace{-10pt}
-        \begin{itemize}[noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt, leftmargin=-1pt]
-            \item 
-        \end{itemize} 
-        \texttt{Event coordination}}
+		{
+			\vspace{-10pt}\\
+	    	Shows that I can step out of my introverted comfort zone when I need to. \\
+	        \texttt{Event coordination}
+		}
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
 %	LANGUAGES
 %----------------------------------------------------------------------------------------
-\vspace{-10 pt}
+\begin{minipage}[t]{0.46\textwidth}
 	\cvsect{Languages}
     \vspace{-6pt}
     
-    \hspace{26mm} \textbf{English} - Fluent, \textbf{Danish} - Native
+	\begin{minipage}{0.28\textwidth}
+    \textbf{English:} 
+	\end{minipage}
+	\hfill
+	\begin{minipage}{0.65\textwidth}
+		Fluent
+	\end{minipage}
+
+	\vspace{4mm}
+	
+	\begin{minipage}{0.28\textwidth}
+		\textbf{Danish:}
+	\end{minipage}
+	\hfill
+	\begin{minipage}{0.65\textwidth}
+		Native
+	\end{minipage}
+
+	\vspace{4mm}
+	
+	\begin{minipage}{0.28\textwidth}
+		\textbf{French:}
+	\end{minipage}
+	\hfill
+	\begin{minipage}{0.65\textwidth}
+		Want to learn
+	\end{minipage}
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.465\textwidth}
+	\cvsect{Blindspots}
+    \vspace{-6pt}
+
+	\begin{minipage}[t]{0.28\textwidth}
+		\textbf{Communication:}
+	\end{minipage}
+	\hfill
+	\begin{minipage}[t]{0.65\textwidth}
+		Introverted. Tends towards solitary work. Prefer fewer but close work partners.
+	\end{minipage}
+
+	\vspace{4mm}
+
+	\begin{minipage}[t]{0.28\textwidth}
+		\textbf{Consistency:}
+	\end{minipage}
+	\hfill
+	\begin{minipage}[t]{0.65\textwidth}
+		Strategic thinker with focus on vision. Beneficial to be part of a team on important milestones.
+	\end{minipage}
+
+\end{minipage}
 
 %----------------------------------------------------------------------------------------
-
 \end{document}
