--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -2,8 +2,8 @@
 I am doing a research project in collaboration with Total Energies. I am in the process of modelling 
 their scheduling process in a way that will allow us to optimize their operations. My main concerns
 in this process is how to make the project succeed with the numerous decision that I have to make but 
-which I feel poorly equiped to make. My hope is that an external stay at Decision Brain will help
-me understand what the best appraoch are to making my project succeed. This includes both the Ph.D. and 
+which I feel poorly equipped to make. My hope is that an external stay at Decision Brain will help
+me understand what the best approach are to making my project succeed. This includes both the Ph.D. and 
 potentially after my graduation. Below is a list of my main issues so far that I have failed to solve by myself. 
 
 \textbf{Main Issues:}
@@ -16,7 +16,7 @@ potentially after my graduation. Below is a list of my main issues so far that I
 	\begin{itemize}
 		\item Stakeholder management, and UX development.
 	\end{itemize}
-	\item Gauging the financial vaule of the project; whether I should continue implementing or keep it academic. 
+	\item Gauging the financial value of the project; whether I should continue implementing or keep it academic. 
 	\begin{itemize}
 		\item I think that the team at Decision Brain will be able to gauge this in less than a month.	
 	\end{itemize}
