--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -421,7 +421,7 @@
 
 @article{abdalrahmanModellingVerificationReconfigurable2021,
 	title = {Modelling and Verification of Reconfigurable Multi-Agent Systems},
-	author = {Abd Alrahman, Yehia and Piterman, Nir},
+	author = {And Alrahman, Yehia and Piterman, Nir},
 	year = {2021},
 	month = aug,
 	journal = {Autonomous Agents and Multi-Agent Systems},
@@ -734,7 +734,7 @@
 	title = {Enhancing the Effectiveness of Joint Production and Maintenance
 	         Scheduling Based on a Multi-Agent System and a {{Pigouvian}}
 	         Approach of Externalities},
-	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcom Chumchoua and Nneme
+	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and Nneme
 	          Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman, L{\'
 	          e}opold Gustave},
 	year = {2024},
@@ -1156,7 +1156,7 @@
 	urldate = {2024-04-18},
 	langid = {english},
 	file = {C:\Users\s174460\Zotero\storage\W3P94WKD\Coudert et al. - 2002 -
-	        Productionmaintenance cooperative scheduling usin.pdf},
+	        Productionmaintenance cooperative scheduling using.pdf},
 }
 
 @article{heAgentbasedHierarchicalProduction2014,
@@ -1657,7 +1657,7 @@
 	            comprehensive experimental analysis, while the proposed approach
 	            outperforms most of the evolutionary-based approaches, it is
 	            outperformed by firefly and hyper-heuristic algorithms in some of
-	            the instances. This points out competiveness of the proposed
+	            the instances. This points out competitiveness of the proposed
 	            approaches. Finally, according to the statistical results of
 	            non-parametric tests, one can conclude that the proposed approach
 	            can be considered as a promising and a competitive algorithm in
