--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,6 +1,6 @@
 @article{abdalrahmanModellingVerificationReconfigurable2021,
 	title = {Modelling and Verification of Reconfigurable Multi-Agent Systems},
-	author = {Abd Alrahman, Yehia and Piterman, Nir},
+	author = {And Alrahman, Yehia and Piterman, Nir},
 	year = {2021},
 	month = aug,
 	journal = {Autonomous Agents and Multi-Agent Systems},
@@ -323,7 +323,7 @@
 	            comprehensive experimental analysis, while the proposed approach
 	            outperforms most of the evolutionary-based approaches, it is
 	            outperformed by firefly and hyper-heuristic algorithms in some of
-	            the instances. This points out competiveness of the proposed
+	            the instances. This points out competitiveness of the proposed
 	            approaches. Finally, according to the statistical results of
 	            non-parametric tests, one can conclude that the proposed approach
 	            can be considered as a promising and a competitive algorithm in
@@ -593,7 +593,7 @@
 	urldate = {2024-04-18},
 	langid = {english},
 	file = {C:\Users\s174460\Zotero\storage\W3P94WKD\Coudert et al. - 2002 -
-	        Productionmaintenance cooperative scheduling usin.pdf},
+	        Productionmaintenance cooperative scheduling using.pdf},
 }
 
 @article{cowlingUsingRealTime2002,
@@ -1075,7 +1075,7 @@
 	title = {Enhancing the Effectiveness of Joint Production and Maintenance
 	         Scheduling Based on a Multi-Agent System and a {{Pigouvian}}
 	         Approach of Externalities},
-	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcom Chumchoua and Nneme
+	author = {Kedy, Ghislain Serge Mepouly and Penda, Malcolm Chumchoua and Nneme
 	          Nneme, L{\'e}andre and Mayi, Olivier Thierry Sosso and Lehman, L{\'
 	          e}opold Gustave},
 	year = {2024},
@@ -1687,12 +1687,12 @@
 
 @misc{saxo.comFaMaintenancePlanning,
 	title = {{F{\aa} Maintenance Planning and Scheduling Handbook af Richard
-	         (Doc) Palmer som Hardback bog p{\aa} engelsk}},
+	         (Doc) Palmer some Hardback bog p{\aa} engelsk}},
 	author = {SAXO.com},
 	journal = {SAXO.com},
 	urldate = {2024-04-19},
 	abstract = {F{\aa} Maintenance Planning and Scheduling Handbook af Richard
-	            (Doc) Palmer som bog p{\aa} engelsk - 9781260135282 - B{\o}ger
+	            (Doc) Palmer some bog p{\aa} engelsk - 9781260135282 - B{\o}ger
 	            rummer alle sider af livet. L{\ae}s Lyt Lev blandt millioner af b
 	            {\o}ger p{\aa} Saxo.com.},
 	howpublished = {
@@ -1740,7 +1740,7 @@
 	isbn = {978-1-4613-7015-4 978-1-4615-4473-9},
 	langid = {english},
 	file = {C:\Users\s174460\Zotero\storage\XIFWZEW6\Shahidehpour and Marwali -
-	        2000 - Maintenance Scheduling in Restructured Power Syste.pdf},
+	        2000 - Maintenance Scheduling in Restructured Power System.pdf},
 }
 
 @inproceedings{shirokikhDynamicAdaptiveLarge2015,
